kubernetes/monitoring/heimdall/heimdall.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
      - name: heimdall
        ports:
        - containerPort: 80
        image: linuxserver/heimdall
        volumeMounts:
          - name: heimdall
            mountPath: /config
      volumes:
        - name: heimdall
          persistentVolumeClaim:
            claimName: heimdall-claim
---
apiVersion: v1
kind: Service
metadata:
  labels:
    task: monitoring
    # For use as a Cluster add-on (https://github.com/kubernetes/kubernetes/tree/master/cluster/addons)
    # If you are NOT using this as an addon, you should comment out this line.
    # kubernetes.io/cluster-service: 'true'
    # kubernetes.io/name: heimdall
  name: heimdall
  namespace: monitoring
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: heimdall

kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: "heimdall"
  namespace: monitoring

spec:
  rules:
    - host: heimdall.bas
      http:
        paths:
          - path: /
            backend:
              serviceName: heimdall
              servicePort: 80
    - host: heimdall.thuis
      http:
        paths:
          - path: /
            backend:
              serviceName: heimdall
              servicePort: 80
    - host: home.bas
      http:
        paths:
          - path: /
            backend:
              serviceName: heimdall
              servicePort: 80
    - host: home.thuis
      http:
        paths:
          - path: /
            backend:
              serviceName: heimdall
              servicePort: 80
